Fixed centre alignment for iframe element.

--- a/style.scss
+++ b/style.scss
@@ -287,3 +287,12 @@ footer {
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
 @import "svg-icons";
+
+
+/* Formatting for <iframe> tags on Project pages. */
+
+.project-iframe {
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
